  RENAME is now available at `POST /api/cores/coreName/rename` (Sanjay Dutt via Jason Gerlowski)

* SOLR-17035: Add trace id to jetty thread names to improve debuggability via stack traces (Alex Deparvu)

* SOLR-17079: Allow to declare replica placement plugins in solr.xml  (Vincent Primault)

* SOLR-16959: Make the internal CoreSorter implementation configurable in solr.xml  (Vincent Primault)

Optimizations
---------------------
* SOLR-17084: LBSolrClient (used by CloudSolrClient) now returns the count of core tracked as not live AKA zombies
  instead of the full list of cores.  This list is potentially as long as the number of cores.  When there are many
  cores, this leads to high CPU and memory usage. (Gilles Bellaton, David Smiley)

Bug Fixes
---------------------
* SOLR-6853: Allow '/' characters in the text managed by Managed Resources API. (Nikita Rusetskii via Eric Pugh)

* SOLR-17039: Entropy calculation in bin/solr script fails in Docker due to missing 'bc' cmd (janhoy)

* SOLR-17045: DenseVectorField w/ vectorDimension > 1024 now work automatically with _default configset, due to
  implicit use of SchemaCodecFactory.  (hossman)

* SOLR-10653: When there's a UUIDField in the schema and atomic update touches another field
  the error occurs when leader updates replica (Mikhail Khludnev)

* SOLR-17093: Collection restore API command now returns "requestid" when executed asynchronously like other APIs
  (Tomás Fernández Löbbe)

Dependency Upgrades
---------------------
* SOLR-17012: Update Apache Hadoop to 3.3.6 and Apache Curator to 5.5.0 (Kevin Risden)

* SOLR-17026: Upgrade to Gradle 8.4 (Kevin Risden)

Other Changes
---------------------
* SOLR-17024: Remove support for the long-defunct "collectionDefaults" clusterprops key (Jason Gerlowski)

* SOLR-17042: Deprecate the V2RequestSupport interface, and the associated `setUseV2` and `setUseBinaryV2` SolrRequest